# hifumi-rs

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  utils.rs
src/commands/: misc.rs  miscellaneous.rs  mod.rs
src/db/: models.rs
src/handlers/: messages.rs
src/helpers/: types.rs  utils.rs
