[package]
name = "hifumi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
dotenv = "0.15.0"
tokio = { version = "1.23.0", features = ["full"] }
mongodb = "2.3.1"
serde = "1.0.152"
serde_json = "1.0.91"


[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "cache"
]
version = "0.11"
