[package]
name = "hifumi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
tokio = { version = "1.25.0", features = ["full"] }
mongodb = "2.3.1"
serde = "1.0.152"
serde_json = "1.0.91"
bson = { version = "2.5.0", features = ["chrono-0_4"] }
futures = "0.3.25"
rand = "0.8.5"
log = "0.4.17"
pretty_env_logger = "0.4.0"
dotenvy = "0.15.6"


[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "cache"
]
version = "0.11.5"
