[package]
edition = "2021"
name    = "hifumi-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
dotenvy = "0.15.6"
futures = "0.3.25"
log = "0.4.17"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.8.0", features = [
    "default",
    "derive",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
tokio = { version = "1.25.0", features = ["full"] }


[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "utils",
]
version = "0.12.2"
